fixed new users not showing up on the home page after they connect

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -175,6 +175,79 @@ form{
   margin-bottom: 5px;
 }
 
+.widget{
+  background-color: #1E1E1E;
+  /* width: 10rem;
+  height: 10rem; */
+  margin: 3px;
+  justify-content: center;
+  border-radius: 10px;
+  /* text-align: center; */
+}
+
+.textWidget{
+  align-content: center;
+  text-align: center;
+}
+
+.mainView{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.userDetails{
+  display: flex;
+  width: 30vw;
+  height: 6%;
+  justify-content: center;
+}
+
+.ongoingGames{
+  background-color: aqua;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 95%;
+  height: 32%;
+}
+
+.leaderBoard{
+  background-color: blueviolet;
+  width: 95%;
+  height: 59.5%;
+}
+
+.miscDetails{
+  /* background-color: burlywood; */
+  justify-items: center;
+  height: 92.5vh;
+  /* padding: 10px; */
+}
+
+.ranking{
+  background-color: yellow;
+  width: 58%;
+  color: black;
+  /* height: 50%; */
+}
+.break{
+  margin-bottom: 20px;
+  border-color: #00BCD4;
+}
+
+.other-detail{
+  background-color: #EF5350;
+  width: 35.5%;
+}
+
+.UserList{
+  height: 90%;
+  padding: 10px;
+  width:10vw;
+}
+
 .text-input{
   margin: 3px;
   width: 90%;
